Code/Gramatica_InjectionFault/output/lingiParser.java
// $ANTLR 3.4 /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g 2013-02-17 18:05:16

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings({"all", "warnings", "unchecked"})
public class lingiParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR", "COMMENT", "ELSE", "ESCREVER", "ESC_SEQ", "EXPONENT", "FALSE", "FLOAT", "FOR", "HEX_DIGIT", "ID", "IF", "INT", "LER", "OCTAL_ESC", "RETURN", "STRING", "TD_BOOL", "TD_CHAR", "TD_FLOAT", "TD_INT", "TD_STRING", "TD_VOID", "TRUE", "UNICODE_ESC", "WHILE", "WS", "'!'", "'!='", "'%'", "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int CHAR=4;
    public static final int COMMENT=5;
    public static final int ELSE=6;
    public static final int ESCREVER=7;
    public static final int ESC_SEQ=8;
    public static final int EXPONENT=9;
    public static final int FALSE=10;
    public static final int FLOAT=11;
    public static final int FOR=12;
    public static final int HEX_DIGIT=13;
    public static final int ID=14;
    public static final int IF=15;
    public static final int INT=16;
    public static final int LER=17;
    public static final int OCTAL_ESC=18;
    public static final int RETURN=19;
    public static final int STRING=20;
    public static final int TD_BOOL=21;
    public static final int TD_CHAR=22;
    public static final int TD_FLOAT=23;
    public static final int TD_INT=24;
    public static final int TD_STRING=25;
    public static final int TD_VOID=26;
    public static final int TRUE=27;
    public static final int UNICODE_ESC=28;
    public static final int WHILE=29;
    public static final int WS=30;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "fors", "declaracao", "opAdd", "equalExprAux", "argsAux", 
    "tipo", "funcao", "opRel", "opMul", "bloco", "andExprAux", "opNot", 
    "ifsElse", "constante", "addExpr", "orExpr", "notExpr", "ifs", "forsexpr", 
    "negationExpr", "declaracaoExpr", "whiles", "opOr", "declaracoes", "expr", 
    "multExprAux", "multExpr", "orExprAux", "andExpr", "argumentos", "retorna", 
    "cabecalho", "opAnd", "invocacao", "atribuicao", "args", "statements", 
    "corpo_funcao", "escrever", "fator", "addExprAux", "ler", "statement", 
    "equalExpr", "programa"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false, false, false, false, false
};

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public lingiParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public lingiParser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this, port, null);

        setDebugListener(proxy);
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
    }

public lingiParser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg, new RecognizerSharedState());
}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

    public String[] getTokenNames() { return lingiParser.tokenNames; }
    public String getGrammarFileName() { return "/home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g"; }


    	private int i = 0;
    	private int fse = 0;
    	private int senao = 0;
    	private int enq = 0;
    	private int fenq = 0;



    // $ANTLR start "programa"
    // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:12:1: programa : ( funcao )* ;
    public final void programa() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "programa");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(12, 0);

        try {
            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:12:9: ( ( funcao )* )
            dbg.enterAlt(1);

            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:13:2: ( funcao )*
            {
            dbg.location(13,2);
            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:13:2: ( funcao )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1, decisionCanBacktrack[1]);

                int LA1_0 = input.LA(1);

                if ( ((LA1_0 >= TD_BOOL && LA1_0 <= TD_VOID)) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:13:2: funcao
            	    {
            	    dbg.location(13,2);
            	    pushFollow(FOLLOW_funcao_in_programa17);
            	    funcao();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(14, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "programa");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "programa"



    // $ANTLR start "funcao"
    // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:16:1: funcao : cabecalho '{' ( corpo_funcao )+ '}' ;
    public final void funcao() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "funcao");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(16, 0);

        try {
            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:16:8: ( cabecalho '{' ( corpo_funcao )+ '}' )
            dbg.enterAlt(1);

            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:16:10: cabecalho '{' ( corpo_funcao )+ '}'
            {
            dbg.location(16,10);
            pushFollow(FOLLOW_cabecalho_in_funcao28);
            cabecalho();

            state._fsp--;

            dbg.location(16,20);
            match(input,49,FOLLOW_49_in_funcao30); 
            dbg.location(16,24);
            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:16:24: ( corpo_funcao )+
            int cnt2=0;
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2, decisionCanBacktrack[2]);

                int LA2_0 = input.LA(1);

                if ( (LA2_0==ESCREVER||LA2_0==FOR||(LA2_0 >= ID && LA2_0 <= IF)||LA2_0==LER||LA2_0==RETURN||(LA2_0 >= TD_BOOL && LA2_0 <= TD_VOID)||LA2_0==WHILE) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:16:24: corpo_funcao
            	    {
            	    dbg.location(16,24);
            	    pushFollow(FOLLOW_corpo_funcao_in_funcao32);
            	    corpo_funcao();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt2++;
            } while (true);
            } finally {dbg.exitSubRule(2);}

            dbg.location(16,38);
            match(input,51,FOLLOW_51_in_funcao35); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(17, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "funcao");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "funcao"



    // $ANTLR start "cabecalho"
    // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:19:1: cabecalho : tipo ID '(' ( argumentos )? ')' ;
    public final void cabecalho() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "cabecalho");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(19, 0);

        try {
            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:20:2: ( tipo ID '(' ( argumentos )? ')' )
            dbg.enterAlt(1);

            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:20:4: tipo ID '(' ( argumentos )? ')'
            {
            dbg.location(20,4);
            pushFollow(FOLLOW_tipo_in_cabecalho46);
            tipo();

            state._fsp--;

            dbg.location(20,9);
            match(input,ID,FOLLOW_ID_in_cabecalho48); 
            dbg.location(20,12);
            match(input,35,FOLLOW_35_in_cabecalho50); 
            dbg.location(20,16);
            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:20:16: ( argumentos )?
            int alt3=2;
            try { dbg.enterSubRule(3);
            try { dbg.enterDecision(3, decisionCanBacktrack[3]);

            int LA3_0 = input.LA(1);

            if ( ((LA3_0 >= TD_BOOL && LA3_0 <= TD_VOID)) ) {
                alt3=1;
            }
            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:20:16: argumentos
                    {
                    dbg.location(20,16);
                    pushFollow(FOLLOW_argumentos_in_cabecalho52);
                    argumentos();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(3);}

            dbg.location(20,28);
            match(input,36,FOLLOW_36_in_cabecalho55); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(21, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "cabecalho");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "cabecalho"



    // $ANTLR start "argumentos"
    // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:23:1: argumentos : declaracao ( ',' declaracao )* ;
    public final void argumentos() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "argumentos");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(23, 0);

        try {
            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:24:2: ( declaracao ( ',' declaracao )* )
            dbg.enterAlt(1);

            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:24:4: declaracao ( ',' declaracao )*
            {
            dbg.location(24,4);
            pushFollow(FOLLOW_declaracao_in_argumentos66);
            declaracao();

            state._fsp--;

            dbg.location(24,15);
            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:24:15: ( ',' declaracao )*
            try { dbg.enterSubRule(4);

            loop4:
            do {
                int alt4=2;
                try { dbg.enterDecision(4, decisionCanBacktrack[4]);

                int LA4_0 = input.LA(1);

                if ( (LA4_0==39) ) {
                    alt4=1;
                }


                } finally {dbg.exitDecision(4);}

                switch (alt4) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:24:16: ',' declaracao
            	    {
            	    dbg.location(24,16);
            	    match(input,39,FOLLOW_39_in_argumentos69); 
            	    dbg.location(24,20);
            	    pushFollow(FOLLOW_declaracao_in_argumentos71);
            	    declaracao();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);
            } finally {dbg.exitSubRule(4);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(25, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "argumentos");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "argumentos"



    // $ANTLR start "corpo_funcao"
    // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:27:1: corpo_funcao : ( declaracoes )? statements ;
    public final void corpo_funcao() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "corpo_funcao");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(27, 0);

        try {
            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:28:2: ( ( declaracoes )? statements )
            dbg.enterAlt(1);

            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:28:4: ( declaracoes )? statements
            {
            dbg.location(28,4);
            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:28:4: ( declaracoes )?
            int alt5=2;
            try { dbg.enterSubRule(5);
            try { dbg.enterDecision(5, decisionCanBacktrack[5]);

            int LA5_0 = input.LA(1);

            if ( ((LA5_0 >= TD_BOOL && LA5_0 <= TD_VOID)) ) {
                alt5=1;
            }
            } finally {dbg.exitDecision(5);}

            switch (alt5) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:28:5: declaracoes
                    {
                    dbg.location(28,5);
                    pushFollow(FOLLOW_declaracoes_in_corpo_funcao86);
                    declaracoes();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(5);}

            dbg.location(28,19);
            System.out.println("CODIGO");
            dbg.location(28,52);
            pushFollow(FOLLOW_statements_in_corpo_funcao93);
            statements();

            state._fsp--;

            dbg.location(28,63);
            System.out.println("HALT");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(29, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "corpo_funcao");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "corpo_funcao"



    // $ANTLR start "declaracoes"
    // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:31:1: declaracoes : ( declaracaoExpr )+ ;
    public final void declaracoes() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "declaracoes");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(31, 0);

        try {
            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:32:2: ( ( declaracaoExpr )+ )
            dbg.enterAlt(1);

            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:32:4: ( declaracaoExpr )+
            {
            dbg.location(32,4);
            System.out.println("MEMORIA DE DADOS");
            dbg.location(32,46);
            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:32:46: ( declaracaoExpr )+
            int cnt6=0;
            try { dbg.enterSubRule(6);

            loop6:
            do {
                int alt6=2;
                try { dbg.enterDecision(6, decisionCanBacktrack[6]);

                int LA6_0 = input.LA(1);

                if ( ((LA6_0 >= TD_BOOL && LA6_0 <= TD_VOID)) ) {
                    alt6=1;
                }


                } finally {dbg.exitDecision(6);}

                switch (alt6) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:32:46: declaracaoExpr
            	    {
            	    dbg.location(32,46);
            	    pushFollow(FOLLOW_declaracaoExpr_in_declaracoes108);
            	    declaracaoExpr();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt6 >= 1 ) break loop6;
                        EarlyExitException eee =
                            new EarlyExitException(6, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt6++;
            } while (true);
            } finally {dbg.exitSubRule(6);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(33, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "declaracoes");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "declaracoes"



    // $ANTLR start "declaracaoExpr"
    // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:35:1: declaracaoExpr : declaracao ';' ;
    public final void declaracaoExpr() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "declaracaoExpr");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(35, 0);

        try {
            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:36:2: ( declaracao ';' )
            dbg.enterAlt(1);

            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:36:4: declaracao ';'
            {
            dbg.location(36,4);
            pushFollow(FOLLOW_declaracao_in_declaracaoExpr120);
            declaracao();

            state._fsp--;

            dbg.location(36,82);
            match(input,42,FOLLOW_42_in_declaracaoExpr124); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(37, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "declaracaoExpr");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "declaracaoExpr"



    // $ANTLR start "declaracao"
    // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:39:1: declaracao : tipo ID ;
    public final void declaracao() throws RecognitionException {
        Token ID1=null;

        try { dbg.enterRule(getGrammarFileName(), "declaracao");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(39, 0);

        try {
            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:40:2: ( tipo ID )
            dbg.enterAlt(1);

            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:40:4: tipo ID
            {
            dbg.location(40,4);
            pushFollow(FOLLOW_tipo_in_declaracao135);
            tipo();

            state._fsp--;

            dbg.location(40,9);
            ID1=(Token)match(input,ID,FOLLOW_ID_in_declaracao137); 
            dbg.location(40,12);
            System.out.println((ID1!=null?ID1.getText():null) + " " + i++ + " TAM 1");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(41, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "declaracao");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "declaracao"



    // $ANTLR start "statements"
    // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:43:1: statements : ( statement )+ ;
    public final void statements() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "statements");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(43, 0);

        try {
            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:44:2: ( ( statement )+ )
            dbg.enterAlt(1);

            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:44:4: ( statement )+
            {
            dbg.location(44,4);
            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:44:4: ( statement )+
            int cnt7=0;
            try { dbg.enterSubRule(7);

            loop7:
            do {
                int alt7=2;
                try { dbg.enterDecision(7, decisionCanBacktrack[7]);

                switch ( input.LA(1) ) {
                case ID:
                    {
                    alt7=1;
                    }
                    break;
                case IF:
                    {
                    alt7=1;
                    }
                    break;
                case WHILE:
                    {
                    alt7=1;
                    }
                    break;
                case FOR:
                    {
                    alt7=1;
                    }
                    break;
                case RETURN:
                    {
                    alt7=1;
                    }
                    break;
                case LER:
                    {
                    alt7=1;
                    }
                    break;
                case ESCREVER:
                    {
                    alt7=1;
                    }
                    break;

                }

                } finally {dbg.exitDecision(7);}

                switch (alt7) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:44:4: statement
            	    {
            	    dbg.location(44,4);
            	    pushFollow(FOLLOW_statement_in_statements150);
            	    statement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt7 >= 1 ) break loop7;
                        EarlyExitException eee =
                            new EarlyExitException(7, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt7++;
            } while (true);
            } finally {dbg.exitSubRule(7);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(45, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "statements");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "statements"



    // $ANTLR start "statement"
    // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:47:1: statement : ( atribuicao ';' | ifs | whiles | fors | invocacao ';' | retorna ';' | ler ';' | escrever ';' );
    public final void statement() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "statement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(47, 0);

        try {
            // /home/miguel/Documentos/ACS/ATS/Code/Gramatica_MSP/lingi.g:48:2: ( atribuicao ';' | ifs | whiles | fors | invocacao ';' | retorna ';' | ler ';' | escrever ';' )
            int alt8=8;
            try { dbg.enterDecision(8, decisionCanBacktrack[8]);

            switch ( input.LA(1) ) {
            case ID:
                {
                int LA8_1 = input.LA(2);

                if ( (LA8_1==35) ) {
                    alt8=5;
                }
                else if ( (LA8_1==45) ) {
                    alt8=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;
